--- a/Source/AlephNote.App/WPF/Dialogs/GenericInputDialog.xaml
+++ b/Source/AlephNote.App/WPF/Dialogs/GenericInputDialog.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d" ResizeMode="NoResize"
 		WindowStartupLocation="CenterOwner"
         Title="__TITLE__" MinWidth="100" MinHeight="100" Height="150" Width="425">
-	<Grid Name="RootGrid" d:DataContext="{self:FolderNameDialog}" >
+	<Grid Name="RootGrid" d:DataContext="{self:GenericInputDialog}" >
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="*"/>
