--- a/Source/AlephNote.App/WPF/Controls/TagEditor.xaml
+++ b/Source/AlephNote.App/WPF/Controls/TagEditor.xaml
@@ -48,6 +48,8 @@
 				Background="Transparent"
 				Grid.Row="0" x:Name="TagCtrl" MinHeight="25" BorderThickness="0" 
 				AcceptsReturn="False" AcceptsTab="False" 
+				IsReadOnly="{Binding Settings.IsReadOnlyMode}"
+				IsReadOnlyCaretVisible="True"
 				VerticalContentAlignment="Bottom">
 			
 			<RichTextBox.Document>
