--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -137,6 +137,7 @@
 									<RowDefinition Height="Auto"/>
 									<RowDefinition Height="Auto"/>
 									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
 								</Grid.RowDefinitions>
 
 								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="3" VerticalAlignment="Center" Content="Start with Windows" IsChecked="{Binding Settings.LaunchOnBoot}" />
@@ -145,8 +146,10 @@
 								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Content="Automatically check for updates" IsChecked="{Binding Settings.CheckForUpdates}" />
 								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="CheckForUpdates" Margin="2,0" VerticalAlignment="Center" />
 
-								<CheckBox      Grid.Row="2" Grid.Column="0" Margin="3" VerticalAlignment="Center" Content="Send anonymous statistics" IsChecked="{Binding Settings.SendAnonStatistics}" />
-								<ctrl:PHelpBtn Grid.Row="2" Grid.Column="1" HelpProperty="SendAnonStatistics" Margin="2,0" VerticalAlignment="Center" />
+								<CheckBox      Grid.Row="2" Grid.Column="0" Margin="3" VerticalAlignment="Center" Content="Use beta release channel" IsChecked="{Binding Settings.UpdateToPrerelease}" Visibility="{Binding IsAppDebugMode, Converter={converter:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+
+								<CheckBox      Grid.Row="3" Grid.Column="0" Margin="3" VerticalAlignment="Center" Content="Send anonymous statistics" IsChecked="{Binding Settings.SendAnonStatistics}" />
+								<ctrl:PHelpBtn Grid.Row="3" Grid.Column="1" HelpProperty="SendAnonStatistics" Margin="2,0" VerticalAlignment="Center" />
 							</Grid>
 						</GroupBox>
 					</Grid>
