--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -14,7 +14,7 @@
 		WindowStartupLocation="CenterOwner"
 		Closed="DialogWindow_Closed"
 		Icon="/Resources/IconMain.png"
-		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="650" Width="535">
+		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="666" Width="555">
 	<Window.Resources>
 		<converter:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -707,7 +707,7 @@
 								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="3" HelpProperty="RawFolderRepoPath" Margin="2,0" VerticalAlignment="Center" />
 
 								<TextBlock Grid.Row="2" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Textfile encoding" />
-								<ComboBox  Grid.Row="2" Grid.Column="1" Margin="0,3,3,3" IsEnabled="{Binding Settings.UseRawFolderRepo}" ItemsSource="{mext:EnumSource settings:EncodingEnum}" SelectedValue="{Binding Settings.RawFolderRepoEncoding}" />
+								<ComboBox  Grid.Row="2" Grid.Column="1" Margin="0,3,50,3" Grid.ColumnSpan="2" IsEnabled="{Binding Settings.UseRawFolderRepo}" ItemsSource="{mext:EnumSource settings:EncodingEnum}" SelectedValue="{Binding Settings.RawFolderRepoEncoding}" />
 
 								<TextBlock Grid.Row="3" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Synchronize modifications from filesystem" />
 								<CheckBox  Grid.Row="3" Grid.Column="1" IsEnabled="{Binding Settings.UseRawFolderRepo}" IsChecked="{Binding Settings.RawFolderRepoAllowModification}" Grid.ColumnSpan="2" VerticalAlignment="Center"/>
