--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -75,6 +75,7 @@
 									<RowDefinition Height="Auto"/>
 									<RowDefinition Height="Auto"/>
 									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
 								</Grid.RowDefinitions>
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="Auto"/>
@@ -93,6 +94,9 @@
 
 								<CheckBox      Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="3" VerticalAlignment="Center" Content="Suppress connection error popups" IsChecked="{Binding Settings.SuppressConnectionProblemPopup}" />
 								<ctrl:PHelpBtn Grid.Row="4" Grid.Column="3" HelpProperty="SuppressConnectionProblemPopup" Margin="2,0" VerticalAlignment="Center" />
+
+								<CheckBox      Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Margin="3" VerticalAlignment="Center" Content="Suppress all sync errors" IsChecked="{Binding Settings.SuppressAllSyncProblemsPopup}" />
+								<ctrl:PHelpBtn Grid.Row="5" Grid.Column="3" HelpProperty="SuppressAllSyncProblemsPopup" Margin="2,0" VerticalAlignment="Center" />
 							</Grid>
 						</GroupBox>
 
