--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -317,6 +317,7 @@
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 
 								<Grid Grid.Row="0" Grid.Column="0">
@@ -359,9 +360,23 @@
 								</Grid>
 
 								<CheckBox Grid.Row="2" Grid.Column="2" Margin="2" Content="Sort pinned notes to the top"  IsChecked="{Binding Settings.SortByPinned}" />
-
-								<TextBlock     Grid.Row="3" Grid.Column="0" Margin="5"  Text="Note Preview:"/>
+								
 								<Grid Grid.Row="3" Grid.Column="2">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="*" />
+										<ColumnDefinition Width="Auto" />
+									</Grid.ColumnDefinitions>
+									<Grid.RowDefinitions>
+										<RowDefinition Height="*" />
+										<RowDefinition Height="*" />
+									</Grid.RowDefinitions>
+
+									<CheckBox Grid.Row="0" Grid.Column="0" Margin="2" Content="Use natural sort order"  IsChecked="{Binding Settings.UseNaturalNoteSort}" />
+									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="UseNaturalNoteSort" Margin="2,0" VerticalAlignment="Center" />
+								</Grid>
+
+								<TextBlock     Grid.Row="4" Grid.Column="0" Margin="5"  Text="Note Preview:"/>
+								<Grid Grid.Row="4" Grid.Column="2">
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="*" />
 										<ColumnDefinition Width="Auto" />
